--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 
 @import "vendor/normalize";
 // Swiper 8.4.7
-// @import "vendor/swiper";
+@import "vendor/swiper";
 
 // Global
 // ---------------------------------
@@ -18,11 +18,19 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/header";
+@import "blocks/navigation";
+@import "blocks/hero";
+@import "blocks/tours";
+@import "blocks/education";
+@import "blocks/about-us";
+@import "blocks/reviews";
+@import "blocks/advantages";
+@import "blocks/gallery";
+@import "blocks/form";
+@import "blocks/contacts";
+@import "blocks/footer";
 @import "blocks/btn";
-@import "blocks/modal";
-@import "blocks/custom-input";
-@import "blocks/custom-toggle";
-@import "blocks/custom-select";
 
 // ---------------------------------
 
