--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,22 +1,13 @@
 .btn {
   display: inline-flex;
-  padding: 10px 20px;
-
   color: $color-default-white;
-
-  background-color: $color-neon-blue;
+  background-color: $color-additional;
   border: none;
   cursor: pointer;
 
   transition: opacity $trans-default;
 
-  &--red {
-    background-color: $color-torch-red;
-  }
-
   &:disabled {
-    opacity: 0.5;
-
     pointer-events: none;
   }
 
