--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,7 @@
 @import "blocks/reviews";
 @import "blocks/advantages";
 @import "blocks/gallery";
-@import "blocks/form";
+@import "blocks/consultation-form";
 @import "blocks/contacts";
 @import "blocks/footer";
 @import "blocks/btn";
