--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,6 +8,8 @@
 
 .contacts__wrapper {
   padding: 0 120px 0;
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
 
