--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -48,20 +48,20 @@
 .hero__swiper-slide {
   position: relative;
   min-height: 800px;
-  background-size: cover;
-  background-repeat: no-repeat;
+  // background-size: cover;
+  // background-repeat: no-repeat;
 
-  &--caucasus {
-    background-image: url("../img/caucasus-desktop.jpg");
-  }
+  // &--caucasus {
+  //   background-image: url("../img/caucasus-desktop.jpg");
+  // }
 
-  &--kamchatka {
-    background-image: url("../img/kamchatka-desktop.jpg");
-  }
+  // &--kamchatka {
+  //   background-image: url("../img/kamchatka-desktop.jpg");
+  // }
 
-  &--altai {
-    background-image: url("../img/altai-desktop.jpg");
-  }
+  // &--altai {
+  //   background-image: url("../img/altai-desktop.jpg");
+  // }
 
 
   @include vp-1199 {
@@ -80,7 +80,49 @@
   right: 0;
   bottom: 0;
   background: $hero-gradient;
-  z-index: 1;
+}
+
+.hero__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+}
+
+.hero__background picture {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+.hero__background img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+// .hero__overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background: $hero-gradient;
+//   z-index: 1;
+//   padding: 200px 120px 80px;
+
+//   @include vp-1199 {
+//     padding: 212px 45px 90px;
+//   }
+
+//   @include vp-767 {
+//     padding: 132px 15px 48px;
+//   }
+// }
+
+.hero__info {
   padding: 200px 120px 80px;
 
   @include vp-1199 {
@@ -89,30 +131,6 @@
 
   @include vp-767 {
     padding: 132px 15px 48px;
-  }
-}
-
-.hero__btn {
-  margin: 0 0 134px;
-
-  padding: 20px 20px;
-  border-radius: 6px;
-  background-color: $color-additional;
-
-  color: $color-white;
-  text-align: center;
-  font-family: $ff-montserrat;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 16px; /* 100% */
-
-  @include vp-1199 {
-    margin: 0 0 45px;
-  }
-
-  @include vp-767 {
-    margin: 0 0 125px;
   }
 }
 
@@ -166,6 +184,55 @@
     width: 100%;
     font-size: 15px;
     line-height: 20px; /* 133.333% */
+  }
+}
+
+.hero__btn {
+  display: inline-flex;
+  margin: 0 0 134px;
+
+  padding: 20px 20px;
+  border-radius: 6px;
+  border: 1px solid $color-additional;
+  background-color: $color-additional;
+
+  color: $color-white;
+  text-align: center;
+  font-family: $ff-montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 100% */
+
+  cursor: pointer;
+  transition: opacity $trans-default;
+
+  &:hover,
+  &:focus {
+    color: $color-condition;
+    background-color: $color-white;
+    transition: $trans-default;
+    border: 1px solid $color-condition;
+    outline: none;
+  }
+
+  &:active {
+    color: $color-white;
+    background-color: $color-condition;
+  }
+
+  &:disabled {
+    color: $color-white;
+    background-color: $color-disabled;
+    pointer-events: none;
+  }
+
+  @include vp-1199 {
+    margin: 0 0 45px;
+  }
+
+  @include vp-767 {
+    margin: 0 0 125px;
   }
 }
 
