--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,7 @@ $color-additional-opacity-10: #0266c11a;
 $color-condition: #1c3374;
 $color-disabled: #999999;
 $color-error: #ff121f;
+$color-podcast: rgb(213, 194, 178);
 
 // Gradient
 
