--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,31 +1,71 @@
 .navigation {
   display: flex;
+  grid-column: 2/3;
 }
 
 .navigation__list {
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  width: 602px;
+  color: $color-white;
+  transform: translate(14px);
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 30px;
 
-  color: $color-white;
+  @include vp-1199 {
+    margin: 0;
+    flex-direction: column;
+    transform: none;
+
+    &--closed {
+      display: none;
+    }
+
+    &--opened {
+      position: absolute;
+      padding: 21px 35px 59px;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-items: flex-start;
+      top: 82px;
+      left: 0;
+      width: 100%;
+      gap: 6px 10px;
+      color: $color-primary;
+      background-color: $color-white;
+      overflow-y: auto;
+    }
+  }
+
+  @include vp-767 {
+    &--opened {
+      padding-top: 47px;
+      padding-bottom: 40px;
+      padding-left: 5px;
+      top: 58px;
+      gap: 2px 10px;
+    }
+  }
 }
 
 .navigation__item {
+  display: flex;
+  align-items: center;
   min-height: 62px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include vp-1199 {
+    min-height: auto;
+  }
 }
 
 .navigation__link {
+  padding: 24px 15px 22px;
   position: relative;
+  display: block;
 
   color: $color-white;
   font-family: $ff-montserrat;
@@ -34,26 +74,13 @@
   font-weight: 400;
   line-height: 16px; /* 100% */
 
-  @include vp-1199 {
-    color: $color-primary;
-    font-weight: 700;
-    letter-spacing: 0.64px;
-    text-transform: uppercase;
-  }
-
-  @include vp-767 {
-    font-size: 14px;
-    line-height: 14px; /* 100% */
-    letter-spacing: 0.56px;
-  }
-
   &:hover {
     &::after {
       position: absolute;
       content: "";
-      top: 22px;
-      left: -5px;
-      width: calc(100% + 10px);
+      bottom: 15px;
+      left: 10px;
+      width: calc(100% - 20px);
       height: 1px;
       background-color: $color-white;
 
@@ -65,7 +92,7 @@
 
   &:focus {
     outline: 1px solid $color-white;
-    outline-offset: 3px;
+    outline-offset: -10px;
 
     &::after {
       content: none;
@@ -73,6 +100,7 @@
 
     @include vp-1199 {
       outline: 1px solid $color-primary;
+      outline-offset: -7px;
     }
   }
 
@@ -84,5 +112,33 @@
     @include vp-1199 {
       color: $color-primary;
     }
+  }
+
+  @include vp-1199 {
+    padding: 10px;
+
+    color: $color-primary;
+    font-weight: 700;
+    letter-spacing: 0.64px;
+    text-transform: uppercase;
+
+    &:hover {
+      &::after {
+        top: 30px;
+        left: 5px;
+        width: calc(100% - 10px);
+        background-color: $color-primary;
+      }
+    }
+
+    &:focus-visible {
+      outline: 1px solid $color-primary;
+    }
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 14px; /* 100% */
+    letter-spacing: 0.56px;
   }
 }
