--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -504,6 +504,10 @@
     line-height: 14px; /* 100% */
     letter-spacing: 0.56px;
   }
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .tours__show-all>span {
