--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -23,6 +23,7 @@ $color-condition: #1c3374;
 $color-disabled: #999999;
 $color-error: #ff121f;
 $color-podcast: rgb(213, 194, 178);
+$color-shadow: rgba(28, 51, 116, 0.1);
 
 // Gradient
 
