--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/header";
 @import "blocks/navigation";
 @import "blocks/hero";
+@import "blocks/video";
 @import "blocks/tours";
 @import "blocks/education";
 @import "blocks/about-us";
