пиксель перфект блок туры

--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -5,17 +5,18 @@
   flex-direction: column;
 
   @include vp-1199 {
-    padding: 88px 0 63px;
+    padding: 68px 0 63px;
     background: none;
   }
 
   @include vp-767 {
-    padding: 66px 0 40px;
+    padding: 55px 0 40px;
   }
 }
 
 .tours__title-wrapper {
   position: relative;
+  overflow: hidden;
 }
 
 .tours__title-wrapper span {
@@ -34,13 +35,12 @@
   opacity: 0.03;
 
   @include vp-1199 {
-    top: -21px;
-    font-size: 40px;
+    top: -17px;
   }
 
   @include vp-767 {
-    top: -3px;
-    font-size: 26px;
+    top: -29px;
+    overflow: hidden;
   }
 }
 
@@ -55,11 +55,11 @@
   margin: 1px 0 49px;
 
   @include vp-1199 {
-    margin: 0 0 43px;
+    margin: 0 0 22px;
   }
 
   @include vp-767 {
-    margin: 0 0 28px;
+    margin: 0 0 23px;
     font-size: 22px;
     line-height: 22px; /* 100% */
   }
@@ -67,13 +67,13 @@
 
 .tours__swiper {
   position: relative;
-  margin: 0 0 53px;
+  margin: 0 0 64px;
   width: 1200px;
   left: calc((100% + 240px - 1440px) / 2);
 
   @include vp-1199 {
     position: static;
-    margin: 0 auto 25px;
+    margin: 0 auto 36px;
     width: 934px;
   }
 
@@ -82,7 +82,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 25px;
+    margin: 0 0 35px;
     width: 100%;
   }
 }
@@ -95,13 +95,11 @@
   right: 0;
 
   @include vp-1199 {
-    top: 84px;
-    right: 45px;
+    top: 65px;
   }
 
   @include vp-767 {
-    top: 69px;
-    right: 15px;
+    top: 40px;
   }
 }
 
@@ -150,19 +148,18 @@
 
 .tours__swiper-slide {
   position: relative;
-  padding: 224px 20px 18px;
+
   display: flex;
-  flex-direction: column;
+  align-items: flex-end;
   max-width: 380px;
   min-height: 416px;
   height: auto;
-  color: $color-default-white;
+  color: $color-white;
   cursor: grab;
   background-color: $color-disabled;
 
   @include vp-1199 {
     max-width: 458px;
-    padding-bottom: 24px;
   }
 
   @include vp-1023 {
@@ -170,10 +167,7 @@
   }
 
   @include vp-767 {
-    padding-top: 68%;
-    padding-bottom: 21px;
     width: 100%;
-    height: calc(100vw * 1.29);
     max-width: none;
   }
 }
@@ -184,6 +178,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .tours__overlay {
@@ -208,69 +203,18 @@
 }
 
 .tours__info {
-  color: $color-white;
-  font-family: $ff-montserrat;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 12px; /* 100% */
-
-  position: relative;
-  margin: 0 0 15px;
   display: flex;
-  align-items: center;
-  gap: 10px 37px;
-  min-height: 29px;
-  z-index: 2;
-
-  @include vp-1199 {
-    gap: 10px 17px;
-  }
-
-  @include vp-767 {
-    margin-bottom: 15px;
-    flex-wrap: wrap;
-    gap: 15px 17px;
-  }
+  flex-direction: column;
+  padding: 25px 20px;
+  margin: 0;
+  width: 100%;
+  gap: 15px;
 }
 
-.tours__info-location {
-  padding: 6px 4px 7px 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 90px;
-  gap: 6px;
-  background-color: $color-additional;
+.tours__info h3 {
+  margin: 0;
+  padding: 0;
 
-  &--altai {
-    padding-right: 10px;
-  }
-
-  @include vp-1199 {
-    &--altai {
-      min-width: 92px;
-    }
-  }
-}
-
-.tours__info-days {
-  display: flex;
-  align-items: center;
-  gap: 10px 13px;
-  min-width: 67px;
-  transform: translate(58px);
-}
-
-.tours__info-nights {
-  display: flex;
-  align-items: center;
-  gap: 10px 13px;
-  min-width: 82px;
-  transform: translate(33px);
-}
-
-.tours__swiper-slide h3 {
   color: $color-white;
   font-family: $ff-montserrat;
   font-size: 24px;
@@ -278,59 +222,99 @@
   font-weight: 700;
   line-height: 28px; /* 116.667% */
 
-  position: relative;
-  margin: 0 0 15px;
-  z-index: 2;
-
-  &::after {
-    position: absolute;
-    content: "";
-    left: 0;
-    bottom: -15px;
-    width: 80px;
-    height: 1px;
-    background-color: $color-default-white;
-    opacity: 0.2;
-  }
+  width: 100%;
+  max-width: 233px;
 
   @include vp-767 {
-    margin-bottom: 31px;
-
-    &::after {
-      bottom: -15px;
-    }
+    width: 219px;
+    max-width: none;
+    min-width: none;
   }
+}
+
+.tours__details-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tours__duration-wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.tours__place,
+.tours__days,
+.tours__nights {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.tours__place p,
+.tours__days p,
+.tours__nights p {
+  margin: 0;
+  padding: 0;
+
+  color: $color-white;
+  font-family: $ff-montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 12px; /* 100% */
+}
+
+.tours__place {
+  background-color: $color-additional;
+  padding: 6px 12px;
+}
+
+.tours__place p {
+  margin-left: 6px;
+}
+
+.tours__days p,
+.tours__nights p {
+  margin-left: 12px;
+}
+
+.tours__line {
+  width: 80px;
+  height: 1px;
+  background-color: $color-white;
+  opacity: 0.2;
 }
 
 .tours__details {
-  margin: 15px 0 15px;
-  position: relative;
-  display: flex;
-  gap: 10px 53px;
-  z-index: 2;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 
-  @include vp-1199 {
-    gap: 0;
-    justify-content: space-between;
-  }
+  display: flex;
+  justify-content: space-between;
 }
 
-.tours__details p {
+.tours__complexity p,
+.tours__date p,
+.tours__group p {
+  margin: 0;
+  padding: 0;
+
   color: $color-white;
   font-family: $ff-montserrat;
   font-size: 12px;
   font-style: normal;
   font-weight: 300;
   line-height: 12px; /* 100% */
-
-  margin: 0;
-
-  @include vp-767 {
-    margin-bottom: -2px;
-  }
 }
 
-.tours__details span {
+.tours__complexity span,
+.tours__date span,
+.tours__group span {
+  margin: 0;
+  padding: 0;
+
   color: $color-white;
   font-family: $ff-montserrat;
   font-size: 13px;
@@ -339,86 +323,16 @@
   line-height: 13px; /* 100% */
 }
 
-.tours__details-level {
-  position: relative;
-  margin-right: 10px;
-
-  &::before {
-    position: absolute;
-    content: "";
-    left: 0;
-    bottom: 4px;
-    width: 80px;
-    height: 14px;
-    background-image: url("../img/sprite.svg#star-empty");
-    background-repeat: repeat;
-    background-size: 16px 14px;
-  }
-
-  &::after {
-    position: absolute;
-    content: "";
-    left: 0;
-    bottom: 4px;
-    height: 14px;
-    background-image: url("../img/sprite.svg#star-filled");
-    background-repeat: repeat;
-    background-size: 16px 14px;
-  }
-
-  &--two::after {
-    width: 32px;
-  }
-
-  &--three::after {
-    width: 48px;
-  }
-
-  &--four::after {
-    width: 64px;
-  }
-
-  @include vp-767 {
-    margin-right: 0;
-
-    &::before {
-      bottom: 6px;
-      width: 73px;
-      height: 13px;
-      background-size: 13px 12px;
-      background-repeat: space;
-    }
-
-    &::after {
-      bottom: 6px;
-      height: 13px;
-      background-size: 13px 12px;
-      background-repeat: space;
-    }
-
-    &--two::after {
-      width: 28px;
-    }
-
-    &--three::after {
-      width: 43px;
-    }
-
-    &--four::after {
-      width: 58px;
-    }
-  }
+.tours__complexity p {
+  margin: 0 0 3px;
 }
 
-.tours__swiper-slide--altai .tours__info-days,
-.tours__swiper-slide--altai .tours__info-nights {
-  column-gap: 8px;
+.tours__star {
+  display: flex;
+  gap: 0 1px;
 }
 
-.tours__swiper-slide--adyghea .tours__info-days,
-.tours__swiper-slide--adyghea .tours__info-nights {
-  column-gap: 10px;
-}
+//button
 
 .tours__show-all {
   color: $color-primary;
@@ -446,10 +360,6 @@
 
 .tours__show-all>span {
   margin-right: 10px;
-
-  @include vp-767 {
-    margin-right: 7px;
-  }
 }
 
 .tours__show-all svg {
