--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -3,31 +3,33 @@
 }
 
 .about-us__wrapper {
-  padding: 123px 0 66px;
+  padding: 22px 0 52px;
 
   @include vp-1199 {
-    padding: 50px 0 37px;
+    padding: 18px 0 175px;
+  }
+
+  @include vp-1023 {
+    padding: 18px 0 0;
   }
 
   @include vp-767 {
-    padding: 425px 0 10px;
+    padding: 407px 0 0;
   }
 }
 
 .about-us__img-wrapper {
   position: absolute;
   top: 0;
-  left: -120px;
+  left: 0;
   z-index: -1;
 
   @include vp-1199 {
     top: 60px;
-    left: -45px;
   }
 
   @include vp-767 {
     top: 0;
-    left: -15px;
   }
 }
 
@@ -63,15 +65,18 @@
   opacity: 0.03;
 
   @include vp-1199 {
-    top: -21px;
+    top: -13px;
+    left: 6px;
     font-size: 40px;
-    left: 0;
+    line-height: 40px; /* 100% */
   }
 
   @include vp-767 {
     top: -3px;
-    font-size: 26px;
     left: 0;
+
+    font-size: 26px;
+    line-height: 26px; /* 100% */
   }
 }
 
@@ -83,14 +88,18 @@
   font-weight: 800;
   line-height: 100%; /* 35px */
 
-  margin: 1px 0 49px;
+  margin: 1px 0 56px;
 
   @include vp-1199 {
-    margin: 0 0 43px;
+    margin: 0 0 35px 5px;
+
+    font-size: 25px;
+    line-height: 25px; /* 100% */
   }
 
   @include vp-767 {
-    margin: 0 0 28px;
+    margin: 0 0 25px;
+
     font-size: 22px;
     line-height: 22px; /* 100% */
   }
@@ -107,11 +116,15 @@
   margin: 0 0 16px;
 
   @include vp-1199 {
+    margin: 0 0 11px;
+
     font-size: 18px;
     line-height: 18px; /* 100% */
   }
 
   @include vp-767 {
+    margin: 0 0 13px;
+
     font-size: 16px;
     line-height: 16px; /* 100% */
   }
@@ -125,6 +138,18 @@
   font-weight: 400;
   line-height: 22px; /* 157.143% */
 
-  margin: 0 0 25px;
+  margin: 0 0 29px;
   max-width: 585px;
+
+  @include vp-1023 {
+    &:last-child {
+      margin: 0;
+    }
+  }
+
+  @include vp-767 {
+    margin: 0 0 27px;
+
+    line-height: 20px; /* 142.857% */
+  }
 }
