--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,17 +1,20 @@
 .reviews__wrapper {
   position: relative;
-  padding: 49px 0;
+  padding: 53px 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 
   @include vp-1199 {
-    padding: 37px 0;
-    background: none;
+    padding: 48px 0;
+  }
+
+  @include vp-1023 {
+    padding: 54px 0;
   }
 
   @include vp-767 {
-    padding: 30px 0;
+    padding: 41px 0;
   }
 }
 
@@ -35,13 +38,17 @@
   opacity: 0.03;
 
   @include vp-1199 {
-    top: -21px;
+    top: -15px;
+
     font-size: 40px;
+    line-height: normal;
   }
 
   @include vp-767 {
     top: -3px;
+
     font-size: 26px;
+    line-height: 26px; /* 100% */
   }
 }
 
@@ -53,14 +60,18 @@
   font-weight: 800;
   line-height: 100%; /* 35px */
 
-  margin: 1px 0 49px;
+  margin: 1px 0 26px;
 
   @include vp-1199 {
-    margin: 0 0 43px;
+    margin: 0 0 44px;
+
+    font-size: 25px;
+    line-height: normal;
   }
 
   @include vp-767 {
-    margin: 0 0 28px;
+    margin: 0 0 18px;
+
     font-size: 22px;
     line-height: 22px; /* 100% */
   }
@@ -74,13 +85,15 @@
   right: 0;
 
   @include vp-1199 {
-    top: 44px;
-    right: 45px;
+    top: 40px;
+  }
+
+  @include vp-1023 {
+    top: 46px;
   }
 
   @include vp-767 {
-    top: 30px;
-    right: 15px;
+    top: 31px;
   }
 }
 
@@ -138,6 +151,7 @@
 
   @include vp-1199 {
     width: 565px;
+    left: 0;
   }
 
   @include vp-767 {
@@ -180,14 +194,14 @@
 }
 
 .reviews__info {
-  margin: 0;
+  margin: -2px 0 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   max-width: 352px;
 
   @include vp-1199 {
-    padding: 3px 0 3px;
+    padding: 6px 0 0;
     max-width: 299px;
   }
 
@@ -206,9 +220,11 @@
   font-weight: 400;
   line-height: 22px; /* 157.143% */
 
-  margin: 0 0 10px;
+  margin: 0;
 
   @include vp-1199 {
+    margin: 0 0 10px;
+
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -223,7 +239,7 @@
 }
 
 .reviews__info h3 {
-  margin: 0 0 8px;
+  margin: 14px 0 8px;
   padding: 0;
 
   color: $color-primary;
@@ -234,7 +250,7 @@
   line-height: 13px; /* 100% */
 
   @include vp-1199 {
-    margin: 7px 0 8px;
+    margin: 16px 0 6px;
   }
 
   @include vp-767 {
