--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -109,11 +109,18 @@
   position: absolute;
   top: 329px;
   right: 120px;
-  // z-index: -1;
+
+  width: 482px;
+  height: 317px;
 
   @include vp-1199 {
-    position: static;
-    margin: 0 0 90px;
+    position: relative;
+    top: 0;
+    right: 0;
+    margin: 0 auto 90px;
+
+    width: 442px;
+    height: 300px;
   }
 
   @include vp-767 {
@@ -121,13 +128,73 @@
   }
 }
 
-.hero__video {
-  width: 482px;
-  height: 317px;
+.hero__video-wrapper > iframe {
+  position: absolute;
+  border: none;
+  top: 0;
+  left: 0;
 
   @include vp-1199 {
     width: 442px;
     height: 300px;
+  }
+}
+
+.hero__video-poster {
+  position: absolute;
+  z-index: 1;
+}
+
+.hero__video-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  z-index: 2;
+  width: 56px;
+  height: 56px;
+  top: calc(50% - 28px);
+  left: calc(50% - 28px);
+  border: 1px solid $color-white;
+  background-color: transparent;
+  border-radius: 50%;
+  cursor: pointer;
+
+  svg {
+    color: $color-white;
+  }
+
+  &:hover,
+  &:focus {
+    outline: none;
+    background: transparent;
+    border: 1px solid $color-condition;
+
+    svg {
+      stroke: $color-black;
+      stroke-width: 1px;
+    }
+  }
+
+  &:active {
+    border: 1px solid $color-condition;
+    background-color: $color-condition;
+
+    svg {
+      stroke: none;
+    }
+  }
+
+  &:disabled,
+  &--disabled {
+    background-color: transparent;
+    border: 1px solid $color-additional-opacity-10;
+    pointer-events: none;
+
+    svg {
+      color: $color-additional-opacity-10;
+    }
   }
 }
 
