--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -69,3 +69,11 @@
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
 }
+
+.is-hidden {
+  display: none;
+}
+
+.is-hidden--else {
+  opacity: 0;
+}
